[main-01]: Создание сущности "Событие" и привязка к событию "Площадка"